MOZ_ASSERT_UNREACHABLE: invalid hyphenation resource? in nsHyphenator.cpp when loading addons.mozilla.org
Categories
(Core :: Layout: Text and Fonts, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox78 | --- | fixed |
People
(Reporter: mattwoodrow, Assigned: jfkthame)
References
Details
Attachments
(1 file)
STR: Load https://addons.mozilla.org/en-US/firefox/addon/unload-tab-from-context-menu/ in a debug build.
Assignee | ||
Comment 1•11 months ago
|
||
Huh, I wonder what hyphenation it's even trying to load. Will look into it...
Comment 2•8 months ago
|
||
is there any updates on this?
It makes the use of debug build close to impossible as we always hit this assertion sooner or later.
At least disable the crash assertion and make that a NS_ASSERTION instead.
Assignee | ||
Comment 3•8 months ago
|
||
I've tried to reproduce this (loading URL from comment 0 with a debug build), but have not seen the problem. Do you have any other STR?
Assignee | ||
Comment 4•8 months ago
|
||
Anyhow, I guess we can safely change this to NS_ASSERTION, as although this is unexpected -- it seems to suggest either something is broken/mispackaged in the build, or maybe we're out of memory? -- it should still be safe.
Assignee | ||
Comment 5•8 months ago
|
||
Updated•8 months ago
|
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/740634c137bb Weaken the MOZ_ASSERT on failing to load a hyphenation resource to an NS_ASSERTION. r=jya
Comment 7•8 months ago
|
||
bugherder |
Assignee | ||
Comment 8•7 months ago
|
||
Matt, Jean-Yves: do you recall, were you both using Windows when you ran into this, by any chance?
Reporter | ||
Comment 9•7 months ago
|
||
Yeah, I was using Windows at the time.
Comment 10•7 months ago
|
||
(In reply to Jonathan Kew (:jfkthame) from comment #8)
Matt, Jean-Yves: do you recall, were you both using Windows when you ran into this, by any chance?
I was indeed.
Assignee | ||
Comment 11•7 months ago
|
||
OK, thanks -- that was the important detail I didn't realize. Filed bug 1650013 to actually fix this.
Description
•