Bug 1616379 - Weaken the MOZ_ASSERT on failing to load a hyphenation resource to an NS_ASSERTION. r=jya

Differential Revision: https://phabricator.services.mozilla.com/D76110